# loom

./: .env  .envsecret  .gitignore  README.md  USAGE.md  arrow_planning.md  bootstrap_test  create_py_project.sh  get_admin_auth  get_user_auth  improvement_plan.md  main.py  new_py_project_instr.md  pip-steps.md  pyproject.toml  pyrefly.toml  scratch.ipynb  set_db_test_user  test.ipynb
loom/: __init__.py
loom/fabric/: moment.py  moment_window.py
loom/fabric/insight/: pdf_value.py  regression.py  spread.py  trending.py
loom/info/: __init__.py  acc_op.py  aggregation.py  atomic.py  blobfile.py  db_client.py  db_driver.py  db_fs_driver.py  directive.py  expression.py  field.py  filter.py  index.py  ledger.py  load.py  match.py  model.py  op.py  persist.py  persist_operation.py  persistable.py  persistable_type.py  predicate.py  query_op.py  sort_op.py  universal.py  util.py
loom/time/: __init__.py  moment.py  perftime.py  timeframing.py  util.py
notes/: apache_arrow.md  arrow_planning.md  async_persistable_plan.md  filter_enhancement.md  improvement_plan.md  loom_info_analysis.md  perftime_enhancement_plan.md  query_api_and_normalization_refactor.md  query_field_enhancement.md  query_normalization_improvement.md
scripts/: generate_test_data.py
tests/: __init__.py  performance_test_model.py  test_fabric.py  test_info_aggregation.py  test_info_blobfile.py  test_info_db_driver.py  test_info_directive.py  test_info_directive_count.py  test_info_filter.py  test_info_persist.py  test_ledger_persist.py  test_model.py  test_pbt_trending.py  test_performance.py  test_persistable_update.py  test_stage_changes.py  test_time_perftime.py  test_time_timeframing.py  test_time_util.py  verify_usage_doc.py
