[project]
name = "loom"
version = "2.6.7"
description = "A Python library for data analysis and persistence."
authors = [
    {name = "Ed Dao",email = "ed@intellogic.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
license = "MIT"
keywords = ["data", "analysis", "mongodb", "persistence"]
homepage = "https://github.com/borghives/loom"
repository = "https://github.com/borghives/loom"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "pyrsistent (>=0.20.0,<0.21.0)",
    "rich (>=14.1.0,<15.0.0)",
    "google-cloud-secret-manager (>=2.24.0,<3.0.0)",
    "pymongo (>=4.14.1,<5.0.0)",
    "keyring (>=25.6.0,<26.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "scipy-stubs (>=1.16.1.1,<2.0.0.0)",
    "arrow (>=1.3.0,<2.0.0)",
    "pymongoarrow (>=1.10.0,<2.0.0)",
    "pyarrow-stubs (>=20.0.0.20250825,<21.0.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "polars (>=1.33.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "loom"
version = "2.4.1"
description = "A Python library for data analysis and persistence."
authors = ["Ed Dao <ed@intellogic.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/borghives/loom"
repository = "https://github.com/borghives/loom"
keywords = ["data", "analysis", "mongodb", "persistence"]

[tool.poetry.group.dev.dependencies]
py-spy = "^0.4.1"
pytest = "^8.4.2"
pandas-stubs = "^2.3.2.250827"
faker = "^37.8.0"
