[project]
name = "loom"
version = "2.12.57"
description = "A Python library for data analysis and persistence."
authors = [{ name = "Ed Dao", email = "ed@intellogic.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = "MIT"
keywords = [
    "data",
    "analysis",
    "mongodb",
    "persistence",
]
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "pyrsistent (>=0.20.0,<0.21.0)",
    "google-cloud-secret-manager (>=2.24.0,<3.0.0)",
    "pymongo (>=4.15.3,<5.0.0)",
    "keyring (>=25.6.0,<26.0.0)",
    "pandas (>=2.2.2,<2.4)",
    "scipy (>=1.16.1,<2.0.0)",
    "arrow (>=1.3.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pyarrow (>=21.0.0,<23.0.0)",
    "pymongoarrow (>=1.10.0,<2.0.0)",
    "polars (>=1.25.0,<2.0.0)",
]
repository = "https://github.com/borghives/loom"
homepage = "https://github.com/borghives/loom"

[project.urls]
Homepage = "https://github.com/borghives/loom"
Repository = "https://github.com/borghives/loom"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "py-spy>=0.4.1,<0.5",
    "pytest>=8.4.2,<9",
    "pandas-stubs>=2.3.2.250827,<3",
    "faker>=37.8.0,<38",
    "rich>=14.1.0,<15",
    "scipy-stubs>=1.16.2.3,<2",
    "pyarrow-stubs>=20.0.0.20250928,<21",
    "pytest-asyncio>=1.2.0,<2",
]

[tool.uv.workspace]
members = [
    "temp_uv_check/test_proj",
]
